# SIR-model-simulation

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Model/: CMakeLists.txt  model.cpp  model.hpp
src/Parser/: CMakeLists.txt  parser.cpp  parser.hpp
src/SIR/: CMakeLists.txt  sir.cpp  sir.hpp
src/Visualizer/: CMakeLists.txt  tui-visualizer.cpp  visualizer.cpp  visualizer.hpp
tests/: CMakeLists.txt  sir.test.cpp
